# z80e

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  MANIFEST.in  pycodestyle.cfg  pyproject.toml  requirements.dev.txt
cmake/: z80py.cmake
source/: z80e.c  z80e.h
source/z80/: emulator.c
source/z80py/: emulator.c  z80py.pyi
source/z80wasm/: emulator.c  emulator.h
test/: CMakeLists.txt  z80test.c
tests/: CMakeLists.txt  common.py  instructions.yaml  test_daa.py  test_instructions.py  z80test.c
tests/utils/: linkedlist.c  linkedlist.h
tools/: compute_daa.py  z80asm.py  z80asmnew.py  z80asmpackrat.py
